# vor-pro

./: .cloudbaseignore  .dockerignore  .env.example  .gitignore  CODEBUDDY.md  Dockerfile  cloudbaserc.json  docker-compose.yml  web.Dockerfile
.codebuddy/: settings.json
.memory/: index.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_lineup_steps.py  0003_admin_users.py  0004_remove_ai_pipeline.py  0005_user_identities.py
backend/app/: config.py  db.py  deps.py  enums.py  logging.py  main.py
backend/app/api/: admin.py  auth.py  jobs.py  lineups.py  manual.py  proxy.py  social.py  videos.py  ws.py
backend/app/crud/: lineups.py
backend/app/models/: __init__.py  favorite.py  frame.py  job.py  lineup.py  lineup_like.py  lineup_report.py  lineup_step.py  user.py  user_identity.py  video.py
backend/app/schemas/: auth.py  job.py  lineup.py  manual.py
backend/app/services/: admin_seed.py  auth_service.py  bilibili_search.py  external_video.py  job_service.py  lineup_dedup.py  manual_service.py  rate_limit.py  storage.py  video_resolver.py  wechat_client.py
backend/app/ws/: manager.py
backend/scripts/: generate-dev-cert.sh
backend/workers/: celery_app.py  cv_tasks.py  dedup_tasks.py  download_tasks.py  frame_pick_tasks.py  search_tasks.py  vlm_tasks.py
docker/: api.Dockerfile  web.Dockerfile  worker.Dockerfile
docs/: class-diagram.mermaid  deploy-release-checklist.md  sequence-diagram.mermaid  system_design.md
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
miniprogram/: .env.example  package-lock.json  package.json  project.config.json  tsconfig.json  types.d.ts
ml/: pyproject.toml
ml/valorant_cv/: __init__.py  ability_tracker.py  frame_grabber.py  hud_detector.py  map_classifier.py  minimap_parser.py  scene_split.py  triplet_extractor.py  types.py
ml/valorant_vlm/: __init__.py  cli.py  client.py  describe_frame.py  lineup_parser.py  parser.py  prompts.py
(+142 files in other folders)
