[project]
name = "vor-backend"
version = "0.1.0"
description = "Valorant Lineup Hunter backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "uvicorn[standard]>=0.30.0,<0.31.0",
  "sqlalchemy[asyncio]>=2.0.32,<2.1.0",
  "asyncpg>=0.29.0,<0.30.0",
  "alembic>=1.13.2,<1.14.0",
  "pydantic>=2.8.2,<2.9.0",
  "pydantic-settings>=2.4.0,<2.5.0",
  "email-validator>=2.2.0,<2.3.0",
  "python-jose[cryptography]>=3.3.0,<3.4.0",
  "bcrypt>=4.1.0,<5.0.0",
  "python-multipart>=0.0.9,<0.0.10",
  "minio>=7.2.7,<7.3.0",
  "redis>=5.0.8,<5.1.0",
  "celery>=5.4.0,<5.5.0",
  "loguru>=0.7.2,<0.8.0",
  "tenacity>=8.5.0,<9.0.0",
  "litellm>=1.44.0,<1.45.0",
  "yt-dlp>=2024.8.6",
  "httpx>=0.27.0,<0.28.0",
  "orjson>=3.10.7,<3.11.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2,<8.4.0",
  "pytest-asyncio>=0.23.8,<0.24.0",
  "ruff>=0.6.2,<0.7.0"
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.api", "app.crud", "app.models", "app.schemas", "app.services", "app.ws", "workers"]

[tool.ruff]
line-length = 100
target-version = "py311"
