[project]
name = "valorant-ml"
version = "0.1.0"
description = "Valorant CV and VLM modules"
requires-python = ">=3.11"
dependencies = [
  "opencv-python-headless>=4.10.0.84,<4.11.0",
  "numpy>=1.26.4,<2.0.0",
  "scenedetect[opencv]>=0.6.4,<0.7.0",
  "pillow>=10.4.0,<10.5.0",
  "imagehash>=4.3.1,<4.4.0",
  "pydantic>=2.8.2,<2.9.0",
  "litellm>=1.44.0,<1.45.0",
  "tenacity>=8.5.0,<9.0.0"
]

[project.optional-dependencies]
vision = [
  "torch>=2.3.0",
  "ultralytics>=8.2.0",
  "paddleocr>=2.8.0"
]
dev = ["pytest>=8.3.2,<8.4.0", "ruff>=0.6.2,<0.7.0"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["valorant_cv", "valorant_vlm"]

[tool.ruff]
line-length = 100
target-version = "py311"
